logs/dag_id=create_and_populate_taxigov_datawarehouse/run_id=manual__2022-08-28T23:38:39.690497+00:00/task_id=create_dim_rides_table/attempt=1.log
[2022-08-28 23:38:42,360] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_rides_table manual__2022-08-28T23:38:39.690497+00:00 [queued]>
[2022-08-28 23:38:42,366] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_rides_table manual__2022-08-28T23:38:39.690497+00:00 [queued]>
[2022-08-28 23:38:42,366] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:38:42,366] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-28 23:38:42,366] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:38:42,375] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): create_dim_rides_table> on 2022-08-28 23:38:39.690497+00:00
[2022-08-28 23:38:42,377] {standard_task_runner.py:52} INFO - Started process 3481 to run task
[2022-08-28 23:38:42,379] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'create_and_populate_taxigov_datawarehouse', 'create_dim_rides_table', 'manual__2022-08-28T23:38:39.690497+00:00', '--job-id', '125', '--raw', '--subdir', 'DAGS_FOLDER/create_and_populate_taxigov_datawarehouse_dag.py', '--cfg-path', '/tmp/tmpa2tmt2yk', '--error-file', '/tmp/tmpuihchged']
[2022-08-28 23:38:42,379] {standard_task_runner.py:80} INFO - Job 125: Subtask create_dim_rides_table
[2022-08-28 23:38:42,419] {task_command.py:371} INFO - Running <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_rides_table manual__2022-08-28T23:38:39.690497+00:00 [running]> on host ddc8002727e0
[2022-08-28 23:38:42,472] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=create_and_populate_taxigov_datawarehouse
AIRFLOW_CTX_TASK_ID=create_dim_rides_table
AIRFLOW_CTX_EXECUTION_DATE=2022-08-28T23:38:39.690497+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-28T23:38:39.690497+00:00
[2022-08-28 23:38:42,479] {base.py:68} INFO - Using connection ID 'redshift_default' for task execution.
[2022-08-28 23:38:43,629] {dbapi.py:231} INFO - Running statement: 
    DROP TABLE IF EXISTS dim_rides;

    CREATE TABLE dim_rides AS ( 
        SELECT
            TO_HEX(
                SHA2(
                    qru_corrida,
                    256
                )
            ) AS id,
            TO_HEX(
                SHA2(
                    CONCAT(
                        CAST(data_abertura AS VARCHAR), 
                        nome_orgao
                    ),
                    256
                )
            ) AS request_id
            data_inicio AS started_at,
            data_final AS ended_at,
            origem_latitude AS pickup_latitude,
            origem_longitude AS pickup_longitude,
            destino_efetivo_latitude AS dropoff_latitude,
            destino_efetivo_longitude AS dropoff_longitude,
            km_total AS distance,
            valor_corrida AS cost
        FROM
            raw__taxigov_corridas
    );, parameters: None
[2022-08-28 23:38:43,957] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "data_inicio"
LINE 21:             data_inicio AS started_at,
                     ^

[2022-08-28 23:38:43,963] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=create_and_populate_taxigov_datawarehouse, task_id=create_dim_rides_table, execution_date=20220828T233839, start_date=20220828T233842, end_date=20220828T233843
[2022-08-28 23:38:43,971] {standard_task_runner.py:97} ERROR - Failed to execute job 125 for task create_dim_rides_table (syntax error at or near "data_inicio"
LINE 21:             data_inicio AS started_at,
                     ^
; 3481)
[2022-08-28 23:38:43,994] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-28 23:38:44,025] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
